[gd_scene load_steps=4 format=3 uid="uid://c851vgxlqy41r"]

[ext_resource type="Script" path="res://scenes/additional/library_additional/create_table/tab_container.gd" id="1_7prjg"]
[ext_resource type="Texture2D" uid="uid://cyb8738pysflg" path="res://assets/icons/big-gear.svg" id="2_h2hvu"]
[ext_resource type="Texture2D" uid="uid://7xwqudu7eh6d" path="res://assets/icons/trash-can.svg" id="3_gixon"]

[node name="tab_container" type="VBoxContainer"]
script = ExtResource("1_7prjg")

[node name="tabbar" type="TabBar" parent="."]
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="tabbar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="settings" type="Button" parent="tabbar/hbox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("2_h2hvu")
icon_alignment = 1
expand_icon = true

[node name="delete" type="Button" parent="tabbar/hbox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("3_gixon")
icon_alignment = 1
expand_icon = true

[node name="tabcontainer" type="TabContainer" parent="."]
layout_mode = 2
tabs_visible = false

[connection signal="tab_clicked" from="tabbar" to="." method="_on_tabbar_tab_clicked"]
[connection signal="pressed" from="tabbar/hbox/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="tabbar/hbox/delete" to="." method="_on_delete_pressed"]
